js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-import-source-no-new-call-expression.js
DONOTEVALUATE
(
)
;
with
(
{
}
)
{
new
import
.
source
(
'
<
module
source
>
'
)
;
}
